# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests-and-linter-check.yml  tests-and-linter.yml
page_loader/: __init__.py  a.conf  b.conf  cli.py  custom_exception.py  downloader.py  exception.py  file_system.py  loader_engine.py  naming.py  page_loader_engine.py  processing.py  resources.py  string_processing.py  substitution.py  url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_page_loader.py
tests/fixtures/: hexlet_co_response.html  hexlet_co_response.txt  hexlet_co_response_with_files.html  page-loader-hexlet-repl-co-page.html
tests/fixtures/expected/: hexlet_co_response_with_files.html  page-loader-hexlet-repl-co-page.html
tests/fixtures/expected/page-loader-hexlet-repl-co-page_files/: page-loader-hexlet-repl-co-page-packs-js-script2.js  page-loader-hexlet-repl-co-script3.js
tests/fixtures/page_structure/page/: courses
tests/fixtures/urls_and_results/: url1.txt  url1_bad.txt  url1_expected.txt  url1_transform.txt  url1_with_pic.txt  url2.txt  url2_transform.txt  url3_transform.txt  url4.txt  url4_expected.txt
